Added tinyxml2 as submodule, updated build instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,31 +7,29 @@ cmake_minimum_required(VERSION 3.21)
 project(
 	mkpsxiso
 	LANGUAGES    C CXX
-	VERSION      1.26
+	VERSION      1.27
 	DESCRIPTION  "PlayStation ISO image maker"
 	HOMEPAGE_URL "https://github.com/Lameguy64/mkpsxiso"
 )
 
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set(CMAKE_C_STANDARD           11)
+set(CMAKE_CXX_STANDARD         11)
+
 ## External dependencies
 
-# Let CMake attempt to find tinyxml2 on its own first. This avoids invoking
-# pkg-config where it might not be installed, and allows usage of package
-# managers like vcpkg. The path to tinyxml2 can also be specified manually by
-# passing -Dtinyxml2_ROOT.
-find_package(tinyxml2 CONFIG)
-
-if(NOT tinyxml2_FOUND)
-	find_package(PkgConfig REQUIRED)
-	pkg_search_module(_tinyxml2 REQUIRED IMPORTED_TARGET tinyxml2)
-
-	add_library(tinyxml2::tinyxml2 ALIAS PkgConfig::_tinyxml2)
+if(NOT EXISTS tinyxml2/tinyxml2.cpp)
+	message(FATAL_ERROR "The tinyxml2 directory is empty. Run 'git submodule update --init' to populate it.")
 endif()
 
-## Executables
+# Build tinyxml2. I didn't bother with tinyxml2's actual CMake integration
+# because it's far easier do do this. It is a single-file library after all.
+add_library               (tinyxml2 STATIC tinyxml2/tinyxml2.cpp)
+target_include_directories(tinyxml2 PUBLIC tinyxml2)
 
-# This is required in order to properly link against tinyxml2 under MSVC.
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-set(CMAKE_CXX_STANDARD         11)
+#add_subdirectory(tinyxml2)
+
+## Executables
 
 function(_add_target name source_dir)
 	file(
@@ -42,16 +40,15 @@ function(_add_target name source_dir)
 
 	add_executable            (${name} ${_sources})
 	target_compile_definitions(${name} PUBLIC VERSION="${PROJECT_VERSION}")
-	target_link_libraries     (${name} tinyxml2::tinyxml2)
+	target_link_libraries     (${name} tinyxml2)
 endfunction()
 
 _add_target(mkpsxiso src)
 #_add_target(mkisoxml mkisoxml/src)
 
-# Ensure the tinyxml2 DLL (if any) is installed alongside mkpsxiso.
 install(
 	TARGETS mkpsxiso
-	RUNTIME_DEPENDENCIES
-	PRE_EXCLUDE_REGEXES ".*"
-	PRE_INCLUDE_REGEXES "tinyxml2"
+	#RUNTIME_DEPENDENCIES
+	#PRE_EXCLUDE_REGEXES ".*"
+	#PRE_INCLUDE_REGEXES "tinyxml2"
 )
