Fix msvc build by removing VLA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ if(NOT MKPSXISO_NO_LIBFLAC)
 	set(INSTALL_PKGCONFIG_MODULES OFF CACHE INTERNAL "")
 	set(INSTALL_CMAKE_CONFIG_MODULE OFF CACHE INTERNAL "")
 	set(WITH_OGG OFF CACHE INTERNAL "")
+	if(MINGW)
+		set(WITH_STACK_PROTECTOR, OFF CACHE INTERNAL "")
+	endif()
 	add_subdirectory(flac)
 endif()
 
