Do not build and install libflac's headers/libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ if(NOT MKPSXISO_NO_LIBFLAC)
 	set(BUILD_PROGRAMS OFF CACHE INTERNAL "")
 	set(BUILD_EXAMPLES OFF CACHE INTERNAL "")
 	set(BUILD_DOCS OFF CACHE INTERNAL "")
+	set(BUILD_TESTING OFF CACHE INTERNAL "")
 	set(INSTALL_MANPAGES OFF CACHE INTERNAL "")
 	set(INSTALL_PKGCONFIG_MODULES OFF CACHE INTERNAL "")
 	set(INSTALL_CMAKE_CONFIG_MODULE OFF CACHE INTERNAL "")
@@ -52,7 +53,7 @@ if(NOT MKPSXISO_NO_LIBFLAC)
 	if(MINGW)
 		set(WITH_STACK_PROTECTOR, OFF CACHE INTERNAL "")
 	endif()
-	add_subdirectory(flac)
+	add_subdirectory(flac EXCLUDE_FROM_ALL)
 endif()
 
 ## Internal dependencies
